# full-stack

backend/: .gitignore  Dockerfile.backend  Pipfile  Procfile  app.py  keys.txt  pyproject.toml  requirements.txt
backend/api/: commands.py  models.py  routes.py  utils.py
backend/logs/: backend.log.1
backend/migrations/versions/: 26d5f5b3f0fc_.py  62c2c2bb52ba_.py  6b83fc3664e2_.py  72a3bdba405a_.py
fastapi-backend/: .env  .env.example  .gitignore  README.md  alembic.ini  database.py  dev.sh  main.py  pyproject.toml  test.py
fastapi-backend/alembic/: env.py
fastapi-backend/app/: main.py
fastapi-backend/app/controllers/: login.py
fastapi-backend/app/database/: __init__.py
fastapi-backend/app/models/: refresh_token.py  user.py
fastapi-backend/app/routes/: __init__.py  chat.py  login.py
fastapi-backend/app/utils/: auth.py  commands.py  index.py  logger.py
fastapi-backend/controllers/: login.py
fastapi-backend/migrations/: env.py
fastapi-backend/models/: User.py
fastapi-backend/routes/: __init__.py  login.py
fastapi-backend/routes/login/: __init__.py
fastapi-backend/utils/: index.py
web/: .env  .env.example  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/chat/: page.tsx
web/lib/: tool.ts
web/network/: index.ts
