[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "sqlalchemy>=2.0.0",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-swagger",
    "psycopg2-binary",
    "flask-cors",
    "gunicorn",
    "cloudinary",
    "flask-admin",
    "typing-extensions",
    "flask-jwt-extended==4.6.0",
    "wtforms==3.1.2",
    "pycryptodome",
    "python-dotenv>=1.2.1",
]
