[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "pycryptodome>=3.23.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = ["controllers", "models", "routes", "utils"]

[project.scripts]
