[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.124.4",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pycryptodome>=3.23.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.37",
]

[tool.setuptools]
packages = ["database", "models", "routes", "controllers", "utils"]

[project.scripts]
