[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.124.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.37",
    "loguru==0.7.3",
    "bcrypt==4.0.1",
    "python-jose>=3.5.0",
]

[tool.setuptools]
packages = ["app"]

[project.scripts]
